# junie-studydeck

./: .gitignore  AGENTS.md  README.md  app.py  models.py  pyproject.toml  seed_data.py  storage.py
routes/: __init__.py  cards.py  decks.py  quiz.py
static/: style.css
templates/: base.html  deck_detail.html  decks_list.html  quiz.html
tests/: conftest.py  test_cards.py  test_decks.py  test_quiz.py
