[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "studydeck"
version = "0.1.0"
description = "Tiny Flask flashcard/quiz app for demoing coding agents"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3,<4",
]

[project.scripts]
studydeck = "app:main"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
]

[tool.setuptools]
py-modules = ["app", "models", "storage", "seed_data"]
packages = ["routes"]
